add body content i.e headers and text field

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Ping-Pong</title>
   </head>
   <body>
+      <h1 class="ping">Ping-Pong</h1>
+<div class="pong">
+  <h2>Let's play!</h2>
+  <h3>Rules:</h3>
+  <p>Ping-Pong will count from 1 to your number with the following exceptions</p>
+  <p>1:Numbers divisible by 3 become ping <br>
+  2:Numbers divisible by 5 become pong <br>
+3:Numbers divisible by 15 become ping-pong</p>
+<form id="ping-pong">
+          <div class="form-group">
+            <label for="Ping-pong">Enter your number here:</label>
+            <input id="Ping-pong" type="text">
+          </div>
 
+</div>
   </body>
 </html>
