--- a/index.html
+++ b/index.html
@@ -1,26 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="/css/styles.css" type="text/css">
-    <title>Ping-Pong</title>
-  </head>
-  <body>
-      <h1 class="ping">Ping-Pong</h1>
-<div class="pong">
-  <h2>Let's play!</h2>
-  <h3>Rules:</h3>
-  <p>Ping-Pong will count from 1 to your number with the following exceptions</p>
-  <p>1:Numbers divisible by 3 become ping <br>
-  2:Numbers divisible by 5 become pong <br>
-3:Numbers divisible by 15 become ping-pong</p>
-<form id="ping-pong">
-          <div class="form-group">
-            <label for="Ping-pong">Enter your number here:</label>
-            <input id="Ping-pong" type="text">
-          </div>
 
-</div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Ping-Pong</title>
+</head>
+
+<body>
+  <h1 class="ping">Ping-Pong</h1>
+  <div class="container">
+    <div class="pong">
+      <div class="row" id="sectionone">
+         <div class="col-md-6">
+           <h2>Let's play!</h2>
+           <h3>Rules:</h3>
+           <p>Ping-Pong will count from 1 to your number with the following exceptions</p>
+           <p>1:Numbers divisible by 3 become ping <br> 2:Numbers divisible by 5 become pong <br> 3:Numbers divisible by 15 become ping-pong</p>
+
+         </div>
+         <div class="col-md-6">
+           <div id="pingpong">
+             <form>
+               <div class="form-group">
+                 <label for="count">Enter your number here:</label>
+                 <input id="count" class="form-control" type="number">
+               </div>
+
+               <button type="button" class="btn" id="button">Ping Pong</button><br>
+             </form>
+           </div>
+         </div>
+      </div>
+
+
+
+
+
+      <div id="output" style="height:200px;overflow-y:auto; margin:20px;">
+        <h3>Output</h3>
+        <p>
+          <span class="count"></span>
+        </p>
+        <ul id="list">
+        </ul>
+      </div>
+
+    </div>
+  </div>
+    <div class="about">
+      <h3><strong><em>About PingPong</em></h3>
+      <p>Created By: Seth Muriuki Wamae</p>
+      <p>Github Username: sethmuriuki</p>
+      <p>Level 2 Test For: </p>
+      </strong>
+    </div>
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
+
+</body>
+
 </html>
