--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
   </div>
     <div class="about">
-      <h3><strong><em>About PingPong</em></h3>
+      <h3><strong><em>About PingPong</em></strong></h3>
       <p>Created By: Seth Muriuki Wamae</p>
       <p>Github Username: sethmuriuki</p>
       <p>Level 2 Test For: </p>
