add change to index

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <h3><strong><em>About PingPong</em></strong></h3>
       <p>Created By: Seth Muriuki Wamae</p>
       <p>Github Username: sethmuriuki</p>
-      <p>Level 2 Test For: </p>
+      <p>Level 2 Test For:Java </p>
       </strong>
     </div>
     <script src="js/jquery-3.2.1.js"></script>
